--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -3,3 +3,12 @@
 }
 
 @Html.Action(MVC.News.LastNewsBlock())
+
+@section scripts{
+    <script type="text/javascript" src="~/Content/dist/js/ge-last-news-block.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('.l-n-b').geLastNewsBlock();
+        });
+    </script>
+}
