--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -2,20 +2,32 @@
 @import (reference) "sizes.less";
 
 @l-n-b-a-color: #2d3e50;
+@l-n-b-g-t-color: #b0b0b0;
+
+.transition{
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+}
 
 .l-n-b {
     margin-top: @def-pad*2;
 }
 
-.l-n-b .row{
-    display:table;
-    width:100%;
+.l-n-b .row {
+    display: table;
+    width: 100%;
 }
 
-.l-n-b .row > div[class^="col-"]{
+.l-n-b .row > div[class^="col-"] {
     float: none;
     display: table-cell;
     vertical-align: top;
+}
+
+.l-n-b .row > div[class^="col-"]:first-child {
+    padding-right: 0;
 }
 
 .l-n-b a {
@@ -32,25 +44,10 @@
     background-color: @color-white;
 }
 
-.l-n-b .content .menu, .l-n-b .content .games{
+.l-n-b .content .menu, .l-n-b .content .games {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-.l-n-b .content .games {
-    border: 1px solid red;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    padding: @def-pad 0;
-}
-
-.l-n-b .content .games > li{
-    height:100%;
-    overflow:hidden;
-    float:left;
 }
 
 .l-n-b .content .menu {
@@ -65,25 +62,90 @@
     display: block;
     padding: 8px;
     padding-left: @def-pad*2;
-    font-size:15px;
-    cursor:pointer;
+    font-size: 15px;
+    cursor: pointer;
     line-height: 1.15em;
 }
 
-.l-n-b .content .menu a:hover{
-    background-color:@color-red;
-    color:@color-white;
+.l-n-b .content .menu a:hover {
+    background-color: @color-red;
+    color: @color-white;
 }
 
-.l-n-b .content .menu a > span{
-    display:block;
+.l-n-b .content .menu a > span {
+    display: block;
 }
 
 .l-n-b .content .menu a > .date {
-    width:90px;
-    float:left;
+    width: 90px;
+    float: left;
 }
 
 .l-n-b .content .menu a > .title {
     margin-left: 90px;
+}
+
+.l-n-b .content .games-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: @def-pad;
+    padding-left: 0;
+}
+
+.l-n-b .content .games-wrapper ul {
+    margin-left: -@def-pad;
+    height: 100%;
+    overflow: hidden;
+}
+
+.l-n-b .content .games-wrapper ul > li {
+    overflow: hidden;
+    float: left;
+    padding-left: @def-pad;
+    height: 100%;
+}
+
+.l-n-b .content .games-wrapper ul > li > a {
+    display: block;
+    height: 100%;
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure, .l-n-b .content .games-wrapper ul > li > a > figure > img {
+    height: 100%;
+    overflow: hidden;
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure {
+    position: relative;
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure > img, .l-n-b .content .games-wrapper ul > li > a > figure .game-title {
+    .transition;
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure:hover > img {
+    position: relative;
+    left: 50%;
+    -moz-transform: scale(1.05) translateX(-50%);
+    -ms-transform: scale(1.05) translateX(-50%);
+    -o-transform: scale(1.05) translateX(-50%);
+    -webkit-transform: scale(1.05) translateX(-50%);
+    transform: scale(1.05) translateX(-50%);
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure:hover .game-title{
+    color:@color-white;
+}
+
+.l-n-b .content .games-wrapper .game-title {
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    font-weight: 700;
+    line-height:1.2;
+    color:@l-n-b-g-t-color;
 }
