--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -149,3 +149,12 @@
     line-height:1.2;
     color:@l-n-b-g-t-color;
 }
+
+.all-news-btn{
+    margin-top:@def-pad*2;
+}
+
+.all-news-btn > .btn {
+    text-transform: uppercase;
+    font-weight: 700;
+}
