--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -4,6 +4,8 @@
 
 @Html.Action(MVC.News.LastNewsBlock())
 
+@Html.Action(MVC.Articles.ForGamersBlock())
+
 @section scripts{
     <script type="text/javascript" src="~/Content/dist/js/ge-last-news-block.min.js"></script>
     <script type="text/javascript">
