--- a/GE.WebUI/Views/News/LastNewsBlock.cshtml
+++ b/GE.WebUI/Views/News/LastNewsBlock.cshtml
@@ -46,4 +46,7 @@
             </div>
         </div>
     </div>
+    <div class="text-center all-news-btn">
+        @Html.RouteLink("Все новости", new { controller = "#", action = "" }, new { @class = "btn btn-default btn-transparent dark-blue" })
+    </div>
 </aside>
