--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -1,4 +1,5 @@
 ﻿@import (reference) "colors.less";
+@import (reference) "sizes.less";
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic);
 
@@ -6,4 +7,24 @@ body {
     font-family: 'Open Sans Condensed';
     color: @color-black;
     background-color: @color-bg;
+}
+
+.wrapper {
+    padding-bottom: @def-pad*2;
+}
+
+.btn-transparent, .btn-transparent:hover, .btn-transparent:focus, .btn-transparent:active {
+    background: none !important;
+    box-shadow:none !important;
+    border:none;
+    outline:none !important;
+}
+
+.btn-transparent {
+    padding: @def-pad + 5px @def-pad*4;
+}
+
+.btn-transparent.dark-blue{
+    border:1px solid @colr-dark-blue;
+    color:@colr-dark-blue;
 }
