--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -8,9 +8,11 @@
 
 @section scripts{
     <script type="text/javascript" src="~/Content/dist/js/ge-last-news-block.min.js"></script>
+    <script type="text/javascript" src="~/Content/dist/js/ge-for-gamers-block.min.js"></script>
     <script type="text/javascript">
         $(function () {
             $('.l-n-b').geLastNewsBlock();
+            $('.f-g-b').geFGB();
         });
     </script>
 }
