--- a/GE.WebUI/Views/Articles/ForGamersBlock.cshtml
+++ b/GE.WebUI/Views/Articles/ForGamersBlock.cshtml
@@ -15,22 +15,20 @@
                     {
                         var game = Model.Games[i];
                         <li>
-                            <a href="#">
+                            <a href="#" rel="noreferrer">
                                 <figure>
                                     <img alt="@game.Title" src="@Url.Action(MVC.Pictures.Picture(game.FrontPictureId, height:80))" />
-                                    <div>
-                                        <h4>@game.Title</h4>
-                                        <div>@game.Description</div>
-                                    </div>
+                                    <h4>@game.Title</h4>
+                                    <span class="desc">@game.Description</span>
                                 </figure>
                             </a>
-                            <a href="#">Кликнуть, чтобы открыть новую вкладку со статьями по игре @game.Title</a>
+                            <a href="#" class="link">Кликнуть, чтобы открыть новую вкладку со статьями по игре @game.Title</a>
                             <ul class="dropdown">
                                 @for (int y = 0; y < game.ArticleTypeLength; y++)
                                 {
                                     var aType = game.ArticleTypes[y];
                                     <li>
-                                        <a href="#">@aType.Description</a>
+                                        <a href="#">Показать @aType.Description в блоке просмотра</a>
                                     </li>
                                 }
                             </ul>
