--- a/GE.WebAdmin/Views/Shared/EditorTemplates/EditGame.cshtml
+++ b/GE.WebAdmin/Views/Shared/EditorTemplates/EditGame.cshtml
@@ -4,6 +4,7 @@
         <input type="text" class="form-control" placeholder="Выберите игру" value="@ViewBag.GameTitle">
         <span class="input-group-btn">
             <button class="btn btn-default" type="button">Выбрать</button>
+            <button class="btn btn-default" type="button"><i class="fa fa-repeat"></i></button>
         </span>
     </div>
     <div class="dropdown"></div>
