--- a/GE.WebUI/Content/less/colors.less
+++ b/GE.WebUI/Content/less/colors.less
@@ -4,5 +4,6 @@
 @color-bg:#ececec;
 @color-red:#c23721;
 @colr-dark-blue:#2d3e50;
+@colr-muted-blue:#93a2b1;
 @color-gray:#d7d7d7;
 @color-light-gray:#e0e0e0;
