--- a/GE.WebUI/Views/Articles/ForGamersBlock.cshtml
+++ b/GE.WebUI/Views/Articles/ForGamersBlock.cshtml
@@ -28,31 +28,18 @@
                                 {
                                     var aType = game.ArticleTypes[y];
                                     <li>
-                                        <a href="#">Показать @aType.Description в блоке просмотра</a>
+                                        <a href="#" data-game-id="@game.Id" data-article-type="@aType.Name">Показать @aType.Description в блоке просмотра</a>
                                     </li>
                                 }
                             </ul>
-
                         </li>
                     }
                 </ul>
             </div>
             <div class="col-md-9">
-                <h3>Статьи</h3>
-                <div class="materials box">
-                    Статьи
-                    Новые сервера Lineage 2 Interlude: где поиграть новичку
-                    : 13.01.2016   : 1   : 0
-                    Вы решили окунуться в фентезийный мир игры Линейдж 2? Самым оптимальным вариантом считаются новые сервера Lineage 2 Interlude. Это самая стабильная и интересная версия игры, в которую играют миллионы пользователей. Почему лучше всего начинать играть на новых и только открывающихся серверах? Потому что там все игроки находятся в одинаковых условиях. Здесь нет явных лидеров и победителей олимпиад
-                    Лучшие сервера для игры в Lineage 2 Interlude – описание, достоинства, недостатки
-                    : 13.01.2016   : 1   : 0
-                    Новое обновление для игры Lineage 2, получившее название Interlude, вышло весной 2007 года. Это обновление многими игроками и критиками считается одним из самых успешных. Давайте разберемся почему миллионы игроков предпочитают играть Lineage 2 именно на Interlude серверах и почему они не переходят на новые версии типа Камаэль. Нововведения в игре Если выходящие до этого патчи и обновления ли
-                    Lineage 2 Classic – возвращение к истокам для настоящих фанов
-                    : 13.01.2016   : 1   : 0
-                    Что представляет из себя MMORPG Lineage 2? Классический гринд. Это означает, что вам придется производить большое количество однообразных действий. Проще говоря, качаться. Перемещаться с одной локации в другую, убивать сотни однотипных монстров, убивать тысячи мобов, чтобы выбить с них нужную вещь. С одной стороны, это утомительно. С другой – именно в этом и есть прелесть корейских MMORPG.
-                    Почему выскакивает ошибка 1073 в игре Линейдж 2 и как ее починить
-                    : 13.01.2016   : 0   : 0
-                    Иногда при запуске игры Lineage 2 возникает ошибка 1073. Что это такое и как с ней бороться? Давайте рассмотрим проблему детальнее. Данная ошибка связана с системой защиты Frost, встроенной в клиент игры. Данная защита должна обезопасить серверы от ботоводства, но часто становится причиной неработающего клиента. Как проявляется Проблема может проявляться двумя способами: Система Frost
+                <h3>Анонсы статей</h3>
+                <div id="materials-preview">
+
                 </div>
             </div>
         </div>
