--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         $(function () {
             $('.l-n-b').geLastNewsBlock();
-            $('.f-g-b').geFGB();
+            $('.f-g-b').geFGB(400);
         });
     </script>
 }
