--- a/GE.WebAdmin/Views/Pictures/FindTable.cshtml
+++ b/GE.WebAdmin/Views/Pictures/FindTable.cshtml
@@ -14,6 +14,7 @@
             <th>
                 <input type="text" />
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -24,6 +25,9 @@
                 <td>@item.Width x @item.Height</td>
                 <td>@item.ImgFormat</td>
                 <td data-text-field>@item.Caption</td>
+                <td style="text-align:center;">
+                    <img alt="@item.Caption" src="@Url.Action(MVC.Pictures.Picture(item.Id, height:30))"/>
+                </td>
             </tr>
         }
     </tbody>
