--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             @RenderBody()
         </div>
     </div>
+    @Html.Partial(MVC.Shared.Views._Footer)
 
     <script src="~/Content/dist/js/site.min.js"></script>
     <script type="text/javascript">
