--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -37,7 +37,24 @@
     </div>
     <div class="bottom">
         <div class="container">
-            sdf
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="first">
+                        <img alt="game-exe.com" src="@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteLogoPath)+"?height=30")" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="second">
+                        Любое использование или копирование материалов сайта - только с разрешения правообладателя и только с указанием ссылки на сайт
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="last">
+                        © Все права защищены, @(DateTime.Now.Year) год<br />
+                        Разработка и поддержка: <a href="mailto:simlex.dev.2014@gmail.com">simlex</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
