--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -308,6 +308,9 @@
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
+                                    <a href="@Url.Action(MVC.Settings.EditSiteLogo())">Логотип сайта</a>
+                                </li>
+                                <li>
                                     <a href="@Url.Action(MVC.Settings.EditEmptyGame())">Начальная иконка</a>
                                 </li>
                             </ul>
