--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -18,6 +18,13 @@ footer .top .menu, footer .top .icons{
     list-style:none;
     padding:0;
     margin:0;
+    display:table;
+    margin-left:-15px;
+}
+
+footer .top li{
+    display:table-cell;
+    padding-left:@def-pad
 }
 
 footer .top .icons{
@@ -27,21 +34,58 @@ footer .top .icons{
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
     }
 
     @media (min-width: @screen-lg-min) {
+        
     }
 }
 
-footer .top .menu > li{
-    margin-right:10px;
-    float:left;
+
+footer .bottom div[class^="col-"]{
+    display:table-cell;
+    float:none;
+    vertical-align: middle;
+    padding: 5px 0;
+    @media (max-width: @screen-xs-max) {
+        display:block;
+        padding: 10px 15px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        display:block;
+        padding: 10px 15px;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
 
-footer .top .icons > li{
-    float:left;
-    margin-left:10px;
+footer .bottom .last{
+    text-align:right;
+    @media (max-width: @screen-xs-max) {
+        text-align:left;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        text-align:left;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
