--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -1,10 +1,11 @@
 ﻿@import (reference) "colors.less";
 @import (reference) "sizes.less";
+@import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 @l-n-b-a-color: #2d3e50;
 @l-n-b-g-t-color: #b0b0b0;
 
-.transition{
+.transition {
     -moz-transition: all 0.2s;
     -o-transition: all 0.2s;
     -webkit-transition: all 0.2s;
@@ -18,16 +19,57 @@
 .l-n-b .row {
     display: table;
     width: 100%;
+
+    @media (max-width: @screen-xs-max) {
+        display: block;
+        width: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .row > div[class^="col-"] {
     float: none;
     display: table-cell;
     vertical-align: top;
+
+    @media (max-width: @screen-xs-max) {
+        float: unset;
+        display: block;
+        vertical-align: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .row > div[class^="col-"]:first-child {
     padding-right: 0;
+    @media (max-width: @screen-xs-max) {
+        padding-right: @def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b a {
@@ -42,6 +84,18 @@
 .l-n-b .content {
     margin-top: @def-pad;
     background-color: @color-white;
+    @media (max-width: @screen-xs-max) {
+        background-color: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .menu, .l-n-b .content .games {
@@ -52,6 +106,19 @@
 
 .l-n-b .content .menu {
     border-left: 4px solid @color-red;
+    @media (max-width: @screen-xs-max) {
+        background-color:@color-white;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+
 }
 
 .l-n-b .content .menu li:nth-child(2n+1) {
@@ -91,12 +158,46 @@
     height: 100%;
     padding: @def-pad;
     padding-left: 0;
+
+    @media (max-width: @screen-xs-max) {
+        position: unset;
+        width: unset;
+        height: unset;
+        padding: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul {
     margin-left: -@def-pad;
     height: 100%;
     overflow: hidden;
+
+    @media (max-width: @screen-xs-max) {
+        margin-left: unset;
+        height: unset;
+        overflow: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        margin-left: unset;
+        height: unset;
+        overflow: unset;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul > li {
@@ -104,6 +205,22 @@
     float: left;
     padding-left: @def-pad;
     height: 100%;
+
+    @media (max-width: @screen-xs-max) {
+        float: unset;
+        height: unset;
+        width: 100% !important;
+        padding-left: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul > li > a {
@@ -118,6 +235,18 @@
 
 .l-n-b .content .games-wrapper ul > li > a > figure {
     position: relative;
+    @media (max-width: @screen-xs-max) {
+        margin-top:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul > li > a > figure > img, .l-n-b .content .games-wrapper ul > li > a > figure .game-title {
@@ -134,8 +263,8 @@
     transform: scale(1.05) translateX(-50%);
 }
 
-.l-n-b .content .games-wrapper ul > li > a > figure:hover .game-title{
-    color:@color-white;
+.l-n-b .content .games-wrapper ul > li > a > figure:hover .game-title {
+    color: @color-white;
 }
 
 .l-n-b .content .games-wrapper .game-title {
@@ -146,12 +275,12 @@
     text-align: center;
     padding: 15px;
     font-weight: 700;
-    line-height:1.2;
-    color:@l-n-b-g-t-color;
+    line-height: 1.2;
+    color: @l-n-b-g-t-color;
 }
 
-.all-news-btn{
-    margin-top:@def-pad*2;
+.all-news-btn {
+    margin-top: @def-pad*2;
 }
 
 .all-news-btn > .btn {
