--- a/GE.WebUI/Views/Menues/_MenuItems.cshtml
+++ b/GE.WebUI/Views/Menues/_MenuItems.cshtml
@@ -6,7 +6,7 @@
         @foreach (var item in Model.Items)
         {
             <li>
-                @Html.RouteLink(item.Caption, new { controller = item.Controller, action=item.Action})
+                <a href="@Url.Action(item.Action, new { controller=item.Controller})" @(!string.IsNullOrEmpty(item.Title) ? "title=" + item.Title : "title=" + item.Caption)>@item.Caption</a>
             </li>
         }
     </ul>
