--- a/GE.WebAdmin/Views/MenuItems/Edit.cshtml
+++ b/GE.WebAdmin/Views/MenuItems/Edit.cshtml
@@ -14,6 +14,13 @@
                 @Html.ValidationMessageFor(x => x.Caption)
             </div>
 
+            <!--title-->
+            <div class="form-group">
+                @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите название пункта меню" } })
+                @Html.ValidationMessageFor(x => x.Title)
+            </div>
+
             <!--route-->
             <div class="form-group">
                 @Html.LabelFor(x => x.RouteId, new { @class = "control-label" })
