--- a/GE.WebAdmin/Views/Menues/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Menues/_GridView.cshtml
@@ -12,7 +12,8 @@
         UpdateTargetId = "grid-articles",
         Data = Model,
         Columns = new SxExtantions.SxGridViewColumn[]{
-            new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование"}
+            new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование"},
+            new SxExtantions.SxGridViewColumn{FieldName="Id", Caption="Идентификатор"}
         },
         Filter = filter,
         SortDirections = sortDirections
