--- a/GE.WebUI/Content/less/footer.less
+++ b/GE.WebUI/Content/less/footer.less
@@ -2,90 +2,214 @@
 @import (reference) "sizes.less";
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
-footer{
-    color:@color-white;
+footer {
+    color: @color-white;
+    background-size: 100% auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
+    @media (max-width: @screen-xs-max) {
+        background-image: url(../i/footer-bg-xs.jpg);
+        background-size: auto 100%;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        background-image: url(../i/footer-bg-sm.jpg);
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        background-image: url(../i/footer-bg-md.jpg);
+    }
+
+    @media (min-width: @screen-lg-min) {
+        background-image: url(../i/footer-bg-lg.jpg);
+    }
 }
 
-footer a, footer a:hover{
-    color:inherit;
+footer a, footer a:hover, footer a:focus {
+    color: inherit;
 }
 
-footer .top, footer .bottom{
+footer .top, footer .bottom {
     background-color: rgba(0,0,0,.2);
 }
 
-footer .top .menu, footer .top .icons{
-    list-style:none;
-    padding:0;
-    margin:0;
-    display:table;
-    margin-left:-15px;
+footer .top .menu, footer .top .icons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: table;
+    margin-left: -15px;
+    line-height: 40px;
 }
 
-footer .top li{
-    display:table-cell;
-    padding-left:@def-pad
+footer .top li {
+    display: table-cell;
+    padding-left: @def-pad;
 }
 
-footer .top .icons{
-    float:right;
+footer .top .icons {
+    float: right;
+
     @media (max-width: @screen-xs-max) {
-        float:none;
+        float: none;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        
     }
 
     @media (min-width: @screen-lg-min) {
-        
     }
 }
 
 
-footer .bottom div[class^="col-"]{
-    display:table-cell;
-    float:none;
+footer .bottom div[class^="col-"] {
+    display: table-cell;
+    float: none;
     vertical-align: middle;
     padding: 5px 0;
+
     @media (max-width: @screen-xs-max) {
-        display:block;
+        display: block;
         padding: 10px 15px;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        display:block;
+        display: block;
         padding: 10px 15px;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        
     }
 
     @media (min-width: @screen-lg-min) {
-        
     }
 }
 
-footer .bottom .last{
-    text-align:right;
+footer .bottom .last {
+    text-align: right;
+
     @media (max-width: @screen-xs-max) {
-        text-align:left;
+        text-align: left;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        text-align:left;
+        text-align: left;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        
     }
 
     @media (min-width: @screen-lg-min) {
-        
+    }
+}
+
+footer .middle {
+    min-height: 200px;
+    padding: @def-pad 0 @def-pad*2;
+    font-size: 17px;
+}
+
+footer .middle li {
+    line-height: 1;
+}
+
+footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+@f-m-h: 24px;
+
+footer .middle .header {
+    font-size: @f-m-h;
+}
+
+footer .middle .last-articles {
+    margin-top: @def-pad;
+}
+
+footer .middle .last-articles li {
+    margin-bottom: @def-pad*2;
+}
+
+footer .middle .last-articles li:last-child {
+    margin-bottom: unset;
+}
+
+footer .middle .menu {
+    font-size: @f-m-h;
+}
+
+footer .middle .menu > li {
+    margin-bottom: @def-pad;
+}
+
+footer .middle .menu > li:last-child {
+    margin-bottom: unset;
+}
+
+footer .middle .sign-menu > li {
+    margin-bottom: @def-pad*2;
+}
+
+footer .middle .sign-menu > li:last-child {
+    margin-bottom: unset;
+}
+
+footer .middle .sign-menu a {
+    display: block;
+    border: 1px solid @color-white;
+    font-size: @f-m-h;
+    padding: @def-pad;
+    border-radius: 4px;
+    text-align: center;
+}
+
+footer .middle .sign-menu a:hover {
+    text-decoration: none;
+}
+
+footer .middle .sign-menu > li:last-child a {
+    text-decoration: underline;
+    border: none;
+}
+
+footer .middle .sign-menu > li:last-child a:hover {
+    text-decoration: none;
+}
+
+footer .middle div[class^="col-"] {
+    @media (max-width: @screen-xs-max) {
+        margin-bottom: @def-pad*4;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+footer .middle div[class^="col-"]:last-child{
+    @media (max-width: @screen-xs-max) {
+        margin-bottom:unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
     }
 }
