--- a/GE.WebUI/Content/less/last-news-block.less
+++ b/GE.WebUI/Content/less/last-news-block.less
@@ -58,6 +58,7 @@
 
 .l-n-b .row > div[class^="col-"]:first-child {
     padding-right: 0;
+
     @media (max-width: @screen-xs-max) {
         padding-right: @def-pad;
     }
@@ -84,6 +85,7 @@
 .l-n-b .content {
     margin-top: @def-pad;
     background-color: @color-white;
+
     @media (max-width: @screen-xs-max) {
         background-color: unset;
     }
@@ -106,8 +108,9 @@
 
 .l-n-b .content .menu {
     border-left: 4px solid @color-red;
+
     @media (max-width: @screen-xs-max) {
-        background-color:@color-white;
+        background-color: @color-white;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -118,7 +121,6 @@
 
     @media (min-width: @screen-lg-min) {
     }
-
 }
 
 .l-n-b .content .menu li:nth-child(2n+1) {
@@ -134,7 +136,7 @@
     line-height: 1.15em;
 }
 
-.l-n-b .content .menu a:hover {
+.l-n-b .content .menu a.hover {
     background-color: @color-red;
     color: @color-white;
 }
@@ -235,8 +237,9 @@
 
 .l-n-b .content .games-wrapper ul > li > a > figure {
     position: relative;
+
     @media (max-width: @screen-xs-max) {
-        margin-top:@def-pad;
+        margin-top: @def-pad;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -251,6 +254,37 @@
 
 .l-n-b .content .games-wrapper ul > li > a > figure > img, .l-n-b .content .games-wrapper ul > li > a > figure .game-title {
     .transition;
+
+    @media (max-width: @screen-xs-max) {
+        -moz-transition: unset;
+        -o-transition: unset;
+        -webkit-transition: unset;
+        transition: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+.l-n-b .content .games-wrapper ul > li > a > figure > img {
+    @media (max-width: @screen-xs-max) {
+        width: 100%;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul > li > a > figure:hover > img {
@@ -261,6 +295,25 @@
     -o-transform: scale(1.05) translateX(-50%);
     -webkit-transform: scale(1.05) translateX(-50%);
     transform: scale(1.05) translateX(-50%);
+
+    @media (max-width: @screen-xs-max) {
+        position: unset;
+        left: unset;
+        -moz-transform: unset;
+        -ms-transform: unset;
+        -o-transform: unset;
+        -webkit-transform: unset;
+        transform: unset;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .l-n-b .content .games-wrapper ul > li > a > figure:hover .game-title {
