--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -40,3 +40,11 @@ body {
     border: 1px solid @color-red;
     color: @color-red;
 }
+
+.shadow {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.4);
+}
